# afterwork

./: .gitignore  README.md  pyproject.toml  run_ui.py
.codex/environments/: environment.toml
src/afterwork/: __init__.py  app_settings.py  domain.py  engine.py  serialization.py  ui_qt.py
